Actualitzar API Rest amb les darreres millores de generació de openapi i client java #397
